# MoonJamRelayServer

./: .gitignore  CMakeLists.txt  README.md  build.sh  deploy.sh  moonjam-relay.service  relay.moon2.tv  relay.veraegames.com  restart.sh  secretkey.txt  test.txt
libs/cpphttplib/: CMakeLists.txt
libs/cpphttplib/include/cpphttplib/: httplib.cc  httplib.h
libs/websocketpp-old/: CMakeLists.txt
src/: APIServer.cpp  APIServer.h  ContiguousQueue.h  Helpers.cpp  Helpers.h  KeyManager.cpp  KeyManager.h  PacketAccumulator.cpp  PacketAccumulator.h  RelayServer.cpp  RelayServer.h  RelayThread.cpp  RelayThread.h  RelayThreadPool.cpp  RelayThreadPool.h  RoomManager.cpp  RoomManager.h  Semaphore.h  WebsocketServer.cpp  WebsocketServer.h  main.cpp
